<resources>
    <string name="app_name">Finance Budgeting App</string>
    <string name="pocketTrack">PocketTrack</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loginUnderlined"><u>Login</u></string>
    <string name="forgotPassword"><u>Forgot Password?</u></string>
    <string name="pocketTrackLogo">PocketTrack Logo</string>
    <string name="createAccount">Create Account</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="bitcoin_icon">bitcoin_icon</string>
    <string name="investing">Investing</string>
    <string name="Saving">Saving</string>
    <string name="submit">Submit</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="what_is_your_average_monthly_salary">What is your Average Monthly Salary:</string>
    <string name="what_are_your_average_monthly_expenses">What are your average Monthly Expenses:</string>
    <string name="do_you_have_an_emergency_fund">Do you have an emergency fund:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="what_is_the_value_of_the_emergency_fund">what is the value of the emergency fund:</string>
    <string name="do_you_have_a_retirement_fund">Do you have a retirement fund:</string>
    <string name="lowercase_yes">Yes</string>
    <string name="what_is_the_value_of_the_retirement_fund">What is the value of the retirement fund:</string>
    <string name="back_icon">back_icon</string>
    <string name="support">Support</string>
    <string name="profile_icon">profile_icon</string>
    <string name="support_icon">support_icon</string>
    <string name="money_icon">money_icon</string>
    <string name="goals_icon">goals_icon</string>
    <string name="home_icon">home_icon</string>
    <string name="Goal_setting">String</string>
    <string name="Goal_Setting">Goal Setting</string>
    <string name="Cancel">Cancel</string>
    <string name="Submit">Submit</string>
    <string name="Goal_s">Goal Setting</string>
    <string name="Goal_Name">Goal Name</string>
    <string name="Goal_Amount">Goal Amount</string>
    <string name="Goal_Logo">TODO</string>


    <string name="InvestingInfo">Investing, broadly, is putting money to work for a period of time in some sort of project or undertaking in order to generate positive returns (i.e., profits that exceed the amount of the initial investment). It is the act of allocating resources, usually capital (i.e., money), with the expectation of generating an income, profit, or gains.
        \n\nOne can invest in many types of endeavors (either directly or indirectly) such as using money to start a business, or in assets such as purchasing real estate in hopes of generating rental income and/or reselling it later at a higher price.
        \n\nInvesting differs from saving in that the money used is put to work, meaning that there is some implicit risk that the related project(s) may fail, resulting in a loss of money. Investing also differs from speculation in that with the latter, the money is not put to work per-se, but is betting on the short-term price fluctuations.</string>
    <string name="SavingInfo">Savings comprise the amount of money left over after spending. People may save for various life goals or aspirations such as retirement, a child\'s college education, the down payment for a home or car, a vacation, or several other examples.
        \n\nSavings may commonly be earmarked for emergencies. For example, Sasha’s monthly paycheck is $5,000. Expenses include a $1,300 rent payment, a $450 car payment, a $500 student loan payment, a $300 credit card payment, $250 for groceries, $75 for utilities, $75 for cellphone service, and $100 for gas. Since Sasha\'s monthly income is $5,000 and monthly expenses are $3,050, there is $1,950 leftover as savings. If Sasha maintains this excess as savings and later faces an emergency, there will be some money to live on while resolving the issue.
        \n\nIf one is unable to maintain savings, they may be said to be living paycheck to paycheck. If such a person experiences an emergency, there is often not enough money saved up to live on and they may risk falling into debt or bankruptcy.</string>
    <string name="tertiary">Tertiary</string>
    <string name="goal">Goal</string>
    <string name="secondary">Secondary</string>
    <string name="primary">Primary</string>
    <string name="Image">Image</string>
    <string name="sign_out"><u>Sign Out</u></string>
    <string name="learn_more"><u>Learn More</u></string>
    <string name="help"><u>Help</u></string>
    <string name="goalbtn_Goals">Goal</string>
    <string name="primarybnt_Goals">Primary</string>
    <string name="secondarybnt_Goals">Secondary</string>
    <string name="tertiarybtn_Goals">Tertiary</string>
    <string name="add_Goals">Image</string>
    <string name="signupText">Don\'t have an account? <u>Signup</u></string>

</resources>