<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_background">

    <!--header-->

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="10dp"
        android:orientation="horizontal">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:textColor="@color/text"
            android:textAlignment="center"/>



    </LinearLayout>



    <!--body-->
    <ScrollView
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toTopOf="@+id/nav"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:fillViewport="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:id="@+id/llBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>


    </ScrollView>




    <!--nav-->
    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_background"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/btnHomePage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/home_icon"
            android:contentDescription="@string/home_icon"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/btnGoalsPage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/goals_icon"
            android:contentDescription="@string/goals_icon"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/ibCalculatorsPage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/money_icon"
            android:contentDescription="@string/money_icon"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/support_icon"
            android:contentDescription="@string/support_icon"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>